<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.ShopDataActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/shop_name_edit" android:layout_marginTop="86dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="32dp"
            android:hint="@string/shop_name"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/localisation_edit" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/shop_name_edit" android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:hint="@string/localiasation"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp" android:id="@+id/shopping_date_edit"
            android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="32dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/localisation_edit"
            android:hint="@string/shopping_date" android:clickable="true" android:focusable="false" />
    <Button
            android:text="@string/next_step"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/next_step_button" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/Widget.AppCompat.Button.Colored" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="48dp" android:layout_marginRight="48dp" android:layout_marginLeft="48dp"
            android:layout_marginStart="48dp"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@color/top_bar_color"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/imageView2" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/shop_name_edit"/>
    <TextView
            android:text="@string/shop_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView2" android:textSize="20sp"
            android:textColor="@android:color/black" app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2" android:layout_marginBottom="8dp"/>
</android.support.constraint.ConstraintLayout>