<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.ShoppingListActivity">

    <Button
            android:text="@string/done"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/done_button" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="32dp"
            android:layout_marginStart="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:textStyle="bold"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/amount_edit" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/done_button" android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp" android:hint="@string/zl15"
    />
    <TextView
            android:text="@string/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/amount_text" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/amount_edit" app:layout_constraintStart_toStartOf="@+id/amount_edit"
            android:textSize="20sp" android:textColor="@android:color/black"/>
    <TextView
            android:text="@string/product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/product_text" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" android:textSize="20sp" android:textColor="@android:color/black"
            android:layout_marginTop="64dp" app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/product_edit"
            app:layout_constraintTop_toBottomOf="@+id/product_text"
            app:layout_constraintStart_toStartOf="@+id/product_text" android:layout_marginEnd="80dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="80dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true" app:srcCompat="@drawable/ic_add"
            android:id="@+id/add_product_button" app:layout_constraintStart_toEndOf="@+id/product_edit"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/product_edit"
            app:layout_constraintBottom_toBottomOf="@+id/product_edit"/>
</android.support.constraint.ConstraintLayout>