<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LogInActivity"
        android:fitsSystemWindows="true">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/email_plain" android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp" android:layout_marginLeft="24dp" android:layout_marginStart="24dp"
            android:hint="@string/email"
            android:textColor="@color/colorPrimary" android:singleLine="false" android:selectAllOnFocus="true"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintBottom_toTopOf="@+id/editText2"
            android:layout_marginBottom="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText2"
            android:hint="@string/password" android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="24dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline2"/>
    <Button
            android:text="@string/log_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button.Colored" android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp" android:layout_marginLeft="32dp" android:layout_marginStart="32dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/guideline2" android:textStyle="bold"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline2"
            app:layout_constraintGuide_percent="0.5"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_eye"
            android:id="@+id/eye_image"
            app:layout_constraintBottom_toBottomOf="@+id/editText2" app:layout_constraintEnd_toEndOf="@+id/editText2"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintTop_toTopOf="@+id/editText2" tools:ignore="VectorDrawableCompat"/>
</android.support.constraint.ConstraintLayout>